--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "colamone_vs",
-  "version": "1.0.0",
-  "description": "colamone_vs\r ===========\r オンライン対応のボードゲームです。  \r ここで遊べます。  \r http://xiidec.appspot.com/colamone_vs/colamone_vs.html",
+  "version": "1.1.0",
+  "description": "colamone_vs - online board game (SkyWay removed, WebSocket relay)",
   "main": "boardgame_vs.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "http-server -p 8081",
+    "relay": "node server.js",
+    "dev": "npm run relay"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,7 @@
   },
   "homepage": "https://github.com/kurehajime/colamone_vs#readme",
   "dependencies": {
-    "http-server": "^0.12.3"
+    "http-server": "^0.12.3",
+    "ws": "^8.18.3"
   }
 }
