--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "colamone_vs\r ===========\r オンライン対応のボードゲームです。  \r ここで遊べます。  \r http://xiidec.appspot.com/colamone_vs/colamone_vs.html",
   "main": "boardgame_vs.js",
   "scripts": {
+    "start": "http-server -p 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
