--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@skyway-sdk/room": "^2.4.0",
     "@skyway-sdk/token": "^2.1.0",
-    "next": "14.2.32",
+    "next": "^14.2.35",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   }
